Layout drafts like posts.

--- a/_config.yml
+++ b/_config.yml
@@ -14,5 +14,10 @@ defaults:
       path: "_posts"
     values:
       layout: "post"
+  -
+    scope:
+      path: "_drafts"
+    values:
+      layout: "post"
 plugins:
   - jekyll-feed
